<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_app">Capstone: My own App</string>
</resources>
