<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pablcorr.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/my_title"
            android:textSize="30sp" />

        <Button
            android:id="@+id/spotify_button"
            style="@style/ButtonTheme"
            android:layout_below="@+id/textView"
            android:onClick="openSpotifyApp"
            android:text="@string/spotify_app" />

        <Button
            android:id="@+id/scores_button"
            style="@style/ButtonTheme"
            android:layout_below="@+id/spotify_button"
            android:onClick="openScoresApp"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/library_button"
            style="@style/ButtonTheme"
            android:layout_below="@+id/scores_button"
            android:onClick="openLibraryApp"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/ButtonTheme"
            android:layout_below="@+id/library_button"
            android:onClick="openBuildItBiggerApp"
            android:text="@string/build_it_bigger_app" />

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/ButtonTheme"
            android:layout_below="@+id/build_it_bigger_button"
            android:onClick="openXyzReaderApp"
            android:text="@string/xyz_reader_app" />

        <Button
            android:id="@+id/capstone_button"
            style="@style/CapstoneTheme"
            android:layout_below="@+id/xyz_reader_button"
            android:onClick="openCapstoneApp"
            android:text="@string/capstone_app" />

    </RelativeLayout>
</ScrollView>




